--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -32,6 +32,11 @@
   <section class="section section-lg-0 pt-lg-0 mt--200">
     <div class="container">
       <div class="row justify-content-center">
+        <div *ngIf="loading" class="row text-center justify-content-center post-title">
+          <div class="col-lg-12">
+            <h1 class="display-3 text-white">Loading...</h1>
+          </div>
+        </div>
         <div *ngIf="loading" class="spinner-container">
           <p-progressSpinner [style]="{width: '150px', height: '150px'}" strokeWidth="4"></p-progressSpinner>
         </div>
