Updated titles for responsiveness

--- a/src/app/categories/posts-category.component.html
+++ b/src/app/categories/posts-category.component.html
@@ -14,7 +14,7 @@
       </div>
       <div class="container py-lg-md d-flex">
         <div class="col px-0">
-          <div class="row text-center justify-content-center">
+          <div class="row text-center justify-content-center post-title">
             <div class="col-lg-12">
               <h1 class="display-3 text-white">It Might Be Interesting
                 <span [hidden]="!showData">Category: {{ category }}</span>
@@ -62,7 +62,6 @@
                             </li>
                           </ul>
                         </div>
-                        <!-- <a routerLink="/{{ post.slug }}" class="btn btn-default mt-4">Read more</a> -->
                       </div>
                     </div>
                   </div>
