Updated core logos. Need to implement additional custom meta data

--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -30,7 +30,7 @@
   </div>
   <section class="section section-lg-0 pt-lg-0 mt--200">
     <div class="post-img">
-      <img src="../../assets/img/It_Might_Be_Interesting_Beige.jpg" />
+      <img src="../../assets/img/It_Might_Be_Interesting_Black.jpeg" />
     </div>
     <div class="container">
       <div class="row justify-content-center post-content">
