--- a/src/app/shared/navbar/navbar.component.html
+++ b/src/app/shared/navbar/navbar.component.html
@@ -1,7 +1,7 @@
 <nav id="navbar-main" class="navbar navbar-main navbar-expand-lg navbar-transparent navbar-light headroom headroom--top headroom--pinned">
   <div class="container">
     <a class="navbar-brand mr-lg-5" [routerLink]="['/']">
-      <img src="./assets/img/It_Might_Be_Interesting_Black.jpg">
+      <img src="./assets/img/It_Might_Be_Interesting_Black.jpeg">
     </a>
     <button class="navbar-toggler" type="button" (click)="isCollapsed = !isCollapsed"
         [attr.aria-expanded]="!isCollapsed" aria-controls="navbar_global">
@@ -12,7 +12,7 @@
         <div class="row">
           <!-- <div class="col-6 collapse-brand">
             <a [routerLink]="['/']">
-              <img src="./assets/img/It_Might_Be_Interesting_Black.jpg">
+              <img src="./assets/img/It_Might_Be_Interesting_Black.jpeg">
             </a>
           </div> -->
           <div class="col-12 collapse-close flex-menu-toggle">
