Updated episode page and new post form

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -130,6 +130,11 @@ ul.post-social-links li a i {
   width: 100%;
 }
 
+.social-post-links {
+  text-align: center;
+  margin-top: 20px;
+}
+
 h3.upcoming {
   margin-bottom: 2rem !important;
   font-weight: 700 !important;
@@ -203,6 +208,7 @@ h3.upcoming {
 
   .social-post-links {
     text-align: center;
+    margin-top: 20px;
   }
 
   .blog-card {
