--- a/src/app/forms/add-episode.component.html
+++ b/src/app/forms/add-episode.component.html
@@ -16,11 +16,11 @@
           <div class="card bg-secondary shadow border-0">
             <div class="card-header bg-white pb-2">
               <div class="text-muted text-center mb-1">
-                <h3>Add Post Info</h3>
+                <h3>Add Episode Details</h3>
               </div>
             </div>
             <div class="card-body px-lg-5 py-lg-5">
-              <form role="form" [formGroup]="addPost" (ngSubmit)="submit()">
+              <form role="form" [formGroup]="addEpisode" (ngSubmit)="submit()">
                 <div class="form-group mb-1">
                   <mat-form-field>
                     <mat-label>Released</mat-label>
@@ -45,7 +45,7 @@
                 </div>
                 <div *ngIf="selectedPost" class="form-group mb-1">
                   <mat-form-field class="example-full-width">
-                    <input matInput type="text" [value]="selectedPost.slug" formControlName="slug" placeholder="Slug" required>
+                    <input matInput type="text" [(ngModel)]="selectedPost.slug" [value]="selectedPost.slug" formControlName="slug" placeholder="Slug" required>
                   </mat-form-field>
                 </div>
                 <div *ngIf="!selectedPost" class="form-group mb-1">
@@ -55,7 +55,7 @@
                 </div>
                 <div *ngIf="selectedPost" class="form-group mb-1">
                   <mat-form-field class="example-full-width">
-                    <input matInput type="text" [value]="website_url" formControlName="website_url" placeholder="Website URL" required>
+                    <input matInput type="text" [(ngModel)]="website_url" [value]="website_url" formControlName="website_url" placeholder="Website URL" required>
                   </mat-form-field>
                 </div>
                 <div class="form-group mb-1">
