Updated new episode and update episode forms

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -141,6 +141,12 @@ h3.upcoming {
   text-align: center !important;
 }
 
+.edit-dialog {
+  width: 900px !important;
+  padding-left: 20px !important;
+  padding-right: 20px !important;
+}
+
 @keyframes ui-progress-spinner-color {
   100%,
   0% {
