--- a/src/app/forms/add-episode.component.html
+++ b/src/app/forms/add-episode.component.html
@@ -12,18 +12,18 @@
     </div>
     <div class="container pt-lg-md">
       <div class="row justify-content-center">
-        <div class="col-lg-8">
+        <div class="col-lg-10">
           <div class="card bg-secondary shadow border-0">
             <div class="card-header bg-white pb-2">
               <div class="text-muted text-center mb-1">
-                <h3>Add Episode Details</h3>
+                <h3>Add Episode</h3>
               </div>
             </div>
             <div class="card-body px-lg-5 py-lg-5">
               <form role="form" [formGroup]="addEpisode" (ngSubmit)="submit()">
                 <div class="form-group mb-1">
                   <mat-form-field>
-                    <mat-label>Released</mat-label>
+                    <mat-label>Available</mat-label>
                     <mat-select formControlName="released">
                       <mat-option value="yes">Yes</mat-option>
                       <mat-option value="no">No</mat-option>
@@ -88,6 +88,85 @@
           </div>
         </div>
       </div>
+      <div class="row justify-content-center">
+        <div class="col-lg-12">
+          <p-toast position="top-center"></p-toast>
+          <div class="card bg-secondary shadow border-0">
+            <div class="card-header bg-white pb-2">
+              <div class="text-muted text-center mb-1">
+                <h3>Edit Episode</h3>
+              </div>
+            </div>
+            <div class="card-body px-lg-5 py-lg-5">
+              <table class="table table-striped">
+                <thead>
+                <tr>
+                  <th scope="col">ID</th>
+                  <th scope="col">Available</th>
+                  <th scope="col">Title</th>
+                  <th scope="col">Actions</th>
+                </tr>
+                </thead>
+                <tbody>
+                <tr *ngFor="let episode of episodes">
+                  <th scope="row">{{ episode.id }}</th>
+                  <td>{{ episode.released }}</td>
+                  <td>{{ episode.title }}</td>
+                  <td>
+                    <button class="btn btn-primary btn-sm" (click)="showDialog(episode)">Edit</button>
+                  </td>
+                </tr>
+                </tbody>
+              </table>
+            </div>
+          </div>
+        </div>
+      </div>
     </div>
+    <p-dialog *ngIf="episode" header="Edit Episode" [(visible)]="display">
+      <h5 class="text-center">{{ episode.title }}</h5>
+      <form role="form" [formGroup]="editEpisode" (ngSubmit)="update()" class="edit-dialog">
+        <div class="form-group mb-1">
+          <label>Available</label>
+          <div class="ui-g" style="width:20%;margin-bottom:10px;display:flex;flex-wrap:nowrap">
+            <div class="ui-g-12"><p-radioButton name="group1" value="yes" label="Yes" formControlName="released" inputId="opt1"></p-radioButton></div>
+            <div class="ui-g-12"><p-radioButton name="group1" value="no" label="No" formControlName="released" inputId="opt2"></p-radioButton></div>
+        </div>
+        </div>
+        <div class="form-group mb-1">
+          <mat-form-field class="example-full-width">
+            <input matInput type="text" [(ngModel)]="episode.slug" formControlName="slug" placeholder="Slug" required>
+          </mat-form-field>
+        </div>
+        <div class="form-group mb-1">
+          <mat-form-field class="example-full-width">
+            <input matInput type="text" [(ngModel)]="episode.website_url" formControlName="website_url" placeholder="Website URL" required>
+          </mat-form-field>
+        </div>
+        <div class="form-group mb-1">
+          <mat-form-field class="example-full-width">
+            <input matInput type="url" [(ngModel)]="episode.embed_url" formControlName="embed_url" placeholder="Embed URL" required>
+          </mat-form-field>
+        </div>
+        <div class="form-group mb-1">
+          <mat-form-field class="example-full-width">
+            <input matInput type="url" [(ngModel)]="episode.itunes_url" formControlName="itunes_url" placeholder="iTunes URL">
+          </mat-form-field>
+        </div>
+        <div class="form-group mb-1">
+          <mat-form-field class="example-full-width">
+            <input matInput type="url" [(ngModel)]="episode.youtube_url" formControlName="youtube_url" placeholder="YouTube URL">
+          </mat-form-field>
+        </div>
+        <div class="form-group mb-1">
+          <mat-form-field class="example-full-width">
+            <input matInput type="url" [(ngModel)]="episode.spotify_url" formControlName="spotify_url" placeholder="Spotify URL">
+          </mat-form-field>
+        </div>
+        <div class="text-center">
+          <button type="submit" value="update" class="btn btn-primary my-4">Submit</button>
+        </div>
+      </form>
+    </p-dialog>
   </section>
 </main>
