--- a/src/app/forms/add-episode.component.html
+++ b/src/app/forms/add-episode.component.html
@@ -23,18 +23,19 @@
               <form role="form" [formGroup]="addEpisode" (ngSubmit)="submit()">
                 <div class="form-group mb-1">
                   <mat-form-field>
-                    <mat-label>Available</mat-label>
-                    <mat-select formControlName="released">
-                      <mat-option value="yes">Yes</mat-option>
-                      <mat-option value="no">No</mat-option>
+                    <mat-label>Select</mat-label>
+                    <mat-select formControlName="title">
+                      <mat-option *ngFor="let post of posts" [value]="post.title" (click)="selectPost(post)">
+                        {{post.title}}</mat-option>
                     </mat-select>
                   </mat-form-field>
                 </div>
                 <div class="form-group mb-1">
                   <mat-form-field>
-                    <mat-label>Select</mat-label>
-                    <mat-select formControlName="title">
-                      <mat-option *ngFor="let post of posts" [value]="post.title" (click)="selectPost(post)">{{post.title}}</mat-option>
+                    <mat-label>Available</mat-label>
+                    <mat-select formControlName="available" required>
+                      <mat-option value="yes">Yes</mat-option>
+                      <mat-option value="no">No</mat-option>
                     </mat-select>
                   </mat-form-field>
                 </div>
@@ -45,7 +46,8 @@
                 </div>
                 <div *ngIf="selectedPost" class="form-group mb-1">
                   <mat-form-field class="example-full-width">
-                    <input matInput type="text" [(ngModel)]="selectedPost.slug" [value]="selectedPost.slug" formControlName="slug" placeholder="Slug" required>
+                    <input matInput type="text" [(ngModel)]="selectedPost.slug" [value]="selectedPost.slug"
+                      formControlName="slug" placeholder="Slug" required>
                   </mat-form-field>
                 </div>
                 <div *ngIf="!selectedPost" class="form-group mb-1">
@@ -55,7 +57,8 @@
                 </div>
                 <div *ngIf="selectedPost" class="form-group mb-1">
                   <mat-form-field class="example-full-width">
-                    <input matInput type="text" [(ngModel)]="website_url" [value]="website_url" formControlName="website_url" placeholder="Website URL" required>
+                    <input matInput type="text" [(ngModel)]="website_url" [value]="website_url"
+                      formControlName="website_url" placeholder="Website URL" required>
                   </mat-form-field>
                 </div>
                 <div class="form-group mb-1">
@@ -98,26 +101,27 @@
               </div>
             </div>
             <div class="card-body px-lg-5 py-lg-5">
-              <table class="table table-striped">
-                <thead>
-                <tr>
-                  <th scope="col">ID</th>
-                  <th scope="col">Available</th>
-                  <th scope="col">Title</th>
-                  <th scope="col">Actions</th>
-                </tr>
-                </thead>
-                <tbody>
-                <tr *ngFor="let episode of episodes">
-                  <th scope="row">{{ episode.id }}</th>
-                  <td>{{ episode.released }}</td>
-                  <td>{{ episode.title }}</td>
-                  <td>
-                    <button class="btn btn-primary btn-sm" (click)="showDialog(episode)">Edit</button>
-                  </td>
-                </tr>
-                </tbody>
-              </table>
+              <p-table [columns]="cols" [value]="episodes" dataKey="id" autoLayout="true">
+                <ng-template pTemplate="header" let-columns>
+                  <tr>
+                    <th *ngFor="let col of columns" [pSortableColumn]="col">
+                      {{col}}
+                      <p-sortIcon [field]="col"></p-sortIcon>
+                    </th>
+                    <th>actions</th>
+                  </tr>
+                </ng-template>
+                <ng-template pTemplate="body" let-rowData let-columns="columns">
+                  <tr>
+                    <td *ngFor="let col of columns">
+                      {{rowData[col]}}
+                    </td>
+                    <td>
+                      <button pButton icon="fas fa-edit" (click)="showDialog(rowData)"></button>
+                    </td>
+                  </tr>
+                </ng-template>
+              </p-table>
             </div>
           </div>
         </div>
@@ -129,9 +133,15 @@
         <div class="form-group mb-1">
           <label>Available</label>
           <div class="ui-g" style="width:20%;margin-bottom:10px;display:flex;flex-wrap:nowrap">
-            <div class="ui-g-12"><p-radioButton name="group1" value="yes" label="Yes" formControlName="released" inputId="opt1"></p-radioButton></div>
-            <div class="ui-g-12"><p-radioButton name="group1" value="no" label="No" formControlName="released" inputId="opt2"></p-radioButton></div>
-        </div>
+            <div class="ui-g-12">
+              <p-radioButton name="group1" value="yes" label="Yes" formControlName="available" inputId="opt1">
+              </p-radioButton>
+            </div>
+            <div class="ui-g-12">
+              <p-radioButton name="group1" value="no" label="No" formControlName="available" inputId="opt2">
+              </p-radioButton>
+            </div>
+          </div>
         </div>
         <div class="form-group mb-1">
           <mat-form-field class="example-full-width">
@@ -140,27 +150,32 @@
         </div>
         <div class="form-group mb-1">
           <mat-form-field class="example-full-width">
-            <input matInput type="text" [(ngModel)]="episode.website_url" formControlName="website_url" placeholder="Website URL" required>
+            <input matInput type="text" [(ngModel)]="episode.website_url" formControlName="website_url"
+              placeholder="Website URL" required>
           </mat-form-field>
         </div>
         <div class="form-group mb-1">
           <mat-form-field class="example-full-width">
-            <input matInput type="url" [(ngModel)]="episode.embed_url" formControlName="embed_url" placeholder="Embed URL" required>
+            <input matInput type="url" [(ngModel)]="episode.embed_url" formControlName="embed_url"
+              placeholder="Embed URL" required>
           </mat-form-field>
         </div>
         <div class="form-group mb-1">
           <mat-form-field class="example-full-width">
-            <input matInput type="url" [(ngModel)]="episode.itunes_url" formControlName="itunes_url" placeholder="iTunes URL">
+            <input matInput type="url" [(ngModel)]="episode.itunes_url" formControlName="itunes_url"
+              placeholder="iTunes URL">
           </mat-form-field>
         </div>
         <div class="form-group mb-1">
           <mat-form-field class="example-full-width">
-            <input matInput type="url" [(ngModel)]="episode.youtube_url" formControlName="youtube_url" placeholder="YouTube URL">
+            <input matInput type="url" [(ngModel)]="episode.youtube_url" formControlName="youtube_url"
+              placeholder="YouTube URL">
           </mat-form-field>
         </div>
         <div class="form-group mb-1">
           <mat-form-field class="example-full-width">
-            <input matInput type="url" [(ngModel)]="episode.spotify_url" formControlName="spotify_url" placeholder="Spotify URL">
+            <input matInput type="url" [(ngModel)]="episode.spotify_url" formControlName="spotify_url"
+              placeholder="Spotify URL">
           </mat-form-field>
         </div>
         <div class="text-center">
